<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="16dp"
            android:text="@string/investigator_register_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/txtInvestigatorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/investigator_name"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/txtInvestigatorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/investigator_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/txtInvestigatorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/investigator_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/txtInvestigatorConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/investigator_confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />

        <Spinner
            android:id="@+id/spnInvestigatorGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:spinnerMode="dropdown"
            android:entries="@array/investigator_grades" />


        <EditText
            android:id="@+id/txtInvestigatorDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/investigator_description"
            android:inputType="textMultiLine"
            android:layout_marginBottom="24dp" />

        <!-- Button para seleccionar la imagen -->
        <Button
            android:id="@+id/btnSeleccionarImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="90dp"
            android:text="Seleccionar Imagen" />



        <Button
            android:id="@+id/btnInvestigatorRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/investigator_register_button"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnInvestigatorGoogleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/investigator_register_with_google_button"
            android:backgroundTint="@android:color/holo_blue_light"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
